[gd_scene load_steps=3 format=3 uid="uid://co1u4ajcoq32b"]

[ext_resource type="StyleBox" uid="uid://bblg5uvit4jtr" path="res://GUI/Inventory/inventory.tres" id="1_1wpwr"]
[ext_resource type="Script" path="res://GUI/Stats/stats_ui.gd" id="1_eqqu1"]

[node name="StatsUI" type="PanelContainer"]
custom_minimum_size = Vector2(128, 128)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -352.0
offset_bottom = -142.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("1_1wpwr")
script = ExtResource("1_eqqu1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="LevelLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="HPBar" type="ProgressBar" parent="VBoxContainer"]
layout_mode = 2

[node name="ExpBar" type="ProgressBar" parent="VBoxContainer"]
layout_mode = 2
